# mag_heading

./: CMakeLists.txt  package.xml
config/: mag_calibration.yaml  rviz_config.rviz
launch/: mag_heading.launch.py  mag_heading_with_rviz.launch.py
src/: mag_heading_node.cpp
